syntax = "proto3";

package wso2.discovery.ga;

option go_package = "github.com/envoyproxy/go-control-plane/wso2/discovery/ga;ga";
option java_package = "org.wso2.choreo.connect.discovery.ga";
option java_outer_classname = "GAApiProto";
option java_multiple_files = false;

// [#protodoc-title: Api]

// API config model
message Api {
  string apiUUID = 1;
  string revisionUUID = 2;
}